merged changes from new_edge_types branch
git-svn-id: http://chianti.ucsd.edu/svn@18479 0ecc0d97-ab19-0410-9704-bfe1a75892f5